# deepfake_detect

./: .gitignore  .pre-commit-config.yaml  .pylintrc  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  QUICKSTART_WEBSOCKET.md  README.md  README_WEBSOCKET.md  app_gradio.py  client_example.py  core.py  exceptions.py  gradio_app.py  hf_detection.py  loader.py  logger.py  mobile_client_example.js  pyproject.toml  pytest.ini  register.py  registry.py  requirement.txt  websocket_server.py
config/: df_arena.yaml  loader.yaml  main.yaml
model/: __init__.py  adapters.py  base.py  factory.py  model_hf_arena.py
model/model_zoo/: model_hf_arena.py
samples/: E_0000418769.flac  E_0001920867.flac  E_0004331595.flac  E_0004369331.flac  E_0005903914.flac  E_0007334684.flac  E_0008524701.flac  E_0008676966.flac  E_0008743481.flac  E_0009420271.flac  move_data.py
utils/: __init__.py  retry.py  validation.py
